# ripgrepx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: skill.md
bench/: baseline.txt  bench.sh
benches/: baseline.txt  bench.sh  index_bench.rs
docs/: cli.md  design.md  index-and-storage.md  indexing.md  mcp.md  profiling.md  proposals.md  querying.md  ripgrep-ignore-and-scope.md
npm/: README.md  install.js  package.json
packaging/homebrew/: ripgrepx.rb
src/: client.rs  compact.rs  config.rs  confirm.rs  cursor.rs  filter.rs  index.rs  lib.rs  main.rs  mcp.rs  pagination.rs  paths.rs  proto.rs  query.rs  rank.rs  server.rs  skill.rs  sort.rs  status.rs  transport.rs  trigram.rs
tests/: index_soundness.rs  soundness.rs  walk_parity.rs  walk_parity_fuzz.rs
tests/common/: mod.rs
